@@ -1,14 +1,5 @@
 package uk.gov.hmcts.reform.orgrolemapping.util;
 
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.lang.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import uk.gov.hmcts.reform.orgrolemapping.apihelper.Constants;
-import uk.gov.hmcts.reform.orgrolemapping.controller.advice.exception.BadRequestException;
-import uk.gov.hmcts.reform.orgrolemapping.domain.model.RoleAssignment;
-import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleCategory;
-
 import javax.inject.Named;
 import javax.inject.Singleton;
 import java.text.ParseException;
@@ -21,7 +12,15 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.lang.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import uk.gov.hmcts.reform.orgrolemapping.apihelper.Constants;
+import uk.gov.hmcts.reform.orgrolemapping.controller.advice.exception.BadRequestException;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.RoleAssignment;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleCategory;
 
 @Named
 @Singleton
@@ -130,8 +129,7 @@ public class ValidationUtil {
                         RoleAssignment::getRoleCategory,
                         RoleAssignment::getRoleType,
                         RoleAssignment::getEndTime,
-                        RoleAssignment::getAttributes))
-                .collect(Collectors.toList());
+                        RoleAssignment::getAttributes)).toList();
     }
 
     @SafeVarargs
@@ -140,7 +138,7 @@ public class ValidationUtil {
         return t -> {
             final List<?> keys = Arrays.stream(keyExtractors)
                     .map(ke -> ke.apply(t))
-                    .collect(Collectors.toList());
+                    .toList();
             return seen.putIfAbsent(keys, Boolean.TRUE) == null;
         };
     }
